--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3037,6 +3037,7 @@
 		color: #fff;
 		padding: 12em 0 20em 0;
 		text-align: center;
+		box-shadow: inset 0 0 0 1000px rgba(0,0,0,.25);
 	}
 
 		#banner :last-child {
