--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1801,7 +1801,7 @@
 		font-size: 16pt;
 		font-weight: 300;
 		line-height: 1.65em;
-		letter-spacing: -0.015em;
+		letter-spacing: 0.015em;
 	}
 
 	a {
@@ -1846,13 +1846,13 @@
 	h2 {
 		font-size: 2.25em;
 		line-height: 1.5em;
-		letter-spacing: -0.035em;
+		letter-spacing:0.035em;
 	}
 
 	h3 {
 		font-size: 1.75em;
 		line-height: 1.5em;
-		letter-spacing: -0.025em;
+		letter-spacing:0.025em;
 	}
 
 	h4 {
@@ -2618,6 +2618,7 @@
 		cursor: pointer;
 		display: inline-block;
 		font-weight: 400;
+		font-size: 1.4em;
 		height: 3em;
 		line-height: 3em;
 		padding: 0 2em;
@@ -3026,7 +3027,20 @@
 			}
 
 /* Banner */
-
+	.crowd {
+		background-attachment: scroll, fixed;
+		background-color: #666;
+		background-image: url("images/overlay.png"), url("../../images/crowd_1.png");
+		background-position: top left, center center;
+		background-repeat: repeat, no-repeat;
+		background-size: auto, cover;
+		color: #fff;
+		padding: 12em 0 12em 0;
+		text-align: center;
+		/* Adjust the last value of the following line to set
+		transparency of background image */
+		box-shadow: inset 0 0 0 1000px rgba(0,0,0,.65);
+	}
 	#banner {
 		background-attachment: scroll,							fixed;
 		background-color: #666;
@@ -3173,8 +3187,8 @@
 /* CTA */
 
 	#cta {
-		background: #e89980;
-		color: #f9e5df;
+		background: #59ABE3;
+		color: #000;
 		padding: 3.5em 0 4em 0;
 		text-align: center;
 	}
@@ -3195,7 +3209,8 @@
 		#cta .button {
 			box-shadow: none;
 			background: #fff;
-			color: #e89980;
+			color: #59ABE3;
+			font-size: 1.4em;
 		}
 
 		#cta input[type="text"],
@@ -3536,7 +3551,7 @@
 			h2 {
 				font-size: 1.75em;
 				line-height: 1.35em;
-				letter-spacing: -0.025em;
+				letter-spacing: 0.025em;
 			}
 
 			h3 {
