--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3310,8 +3310,9 @@
 	}
 
 /* Narrower */
-
+/*Made the button invisible as it is currently not needed */
 	#navPanel, #navButton {
+		visibility: hidden;
 		display: none;
 	}
 
