Used smaller image sizes and jpg instead of png to reduce loading time

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -57,7 +57,7 @@
 	}
 
 /* Containers */
-	
+
 	.container {
 		margin-left: auto;
 		margin-right: auto;
@@ -3030,7 +3030,7 @@
 	.crowd {
 		background-attachment: scroll, fixed;
 		background-color: #666;
-		background-image: url("images/overlay.png"), url("../../images/crowd_1.png");
+		background-image: url("images/overlay.png"), url("../../images/crowd_1.jpg");
 		background-position: top left, center center;
 		background-repeat: repeat, no-repeat;
 		background-size: auto, cover;
